--- a/Index.html
+++ b/Index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix India – Watch TV Shows Online, Watch Movies Online</title>
+        <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
     <div class="main">
         <nav>
-          <span><img  src="assets/Images/logo1.svg"  width="53px" ></span> 
+          <span><img  src="logo1.svg"  width="53px" ></span> 
           <div>
             <button class="btn">English</button>
             <button class="btn-red-sm btn">Sign in</button>
@@ -141,4 +142,5 @@
         </div>
   </footer>
 </body>
+
 </html>
